--- a/login.html
+++ b/login.html
@@ -16,6 +16,8 @@
         <link href="css/swiper.css" rel="stylesheet" type="text/css">
         <link href="css/swipebox.min.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+                <link href="css/pace-theme-center-circle.css" rel="stylesheet" type="text/css"/>
+
     </head>
 
     <body>
@@ -57,6 +59,7 @@
         </div> <!-- End of Page Container -->
         
         <script src="cordova.js"></script>
+        <script src="js/pace.min.js"></script>
 
         <script src="js/jquery-2.1.0.min.js"></script>
         <script src="js/jquery.swipebox.min.js"></script>   
