--- a/index.html
+++ b/index.html
@@ -13,159 +13,50 @@
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all" rel="stylesheet" type="text/css">
         <!-- Styles -->
         <link href="css/keyframes.css" rel="stylesheet" type="text/css">
+      
         <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
         <link href="css/swiper.css" rel="stylesheet" type="text/css">
         <link href="css/swipebox.min.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/pace-theme-center-circle.css" rel="stylesheet" type="text/css"/>
+  
+        <style>
+            .meh {
+                margin-top: 70px;
+                margin-left: 15px;
+                margin-right: 45px;
+            }
 
-
+            .floating-button.animated.bouncein.delay-3 {
+                text-align: right;
+                margin: -43px 10px 0px;
+                float: right;
+            }
+        </style>
 
 
     </head>
 
-    <body>
+    <body ng-controller="homeCtrl">
         <div class="m-scene" id="main"> <!-- Main Container -->
 
             <!-- Left Sidebar -->
             <ul id="slide-out-left" class="side-nav collapsible">
                 <li>
                     <div class="sidenav-header primary-color">
-                        <div class="nav-social">
-                            <i class="ion-social-facebook"></i>
-                            <i class="ion-social-twitter"></i>
-                            <i class="ion-social-tumblr"></i>
-                        </div>
+
                         <div class="nav-avatar">
-                            <img class="circle avatar" src="img/user.jpg" alt="">
+                            <img class="circle avatar" src="img/user.png" alt="">
                             <div class="avatar-body">
-                                <h3>Halo</h3>
-                                <p>Material Mobile</p>
+                                <h3>Hello</h3>
+                                <p>{{ user.display_name}}</p>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-home"></i> Home <span class="badge blue lighten-2">5</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="index.html">Classic</a>
-                                <a href="index-sliced.html">Sliced</a>
-                                <a href="index-slider.html">Slider</a>
-                                <a href="index-drawer.html">Drawer</a>
-                                <a href="index-walkthrough.html">Walkthrough</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-exit"></i> Layout <span class="badge blue lighten-2">5</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="material.html">Material</a>
-                                <a href="left-sidebar.html">Left</a>
-                                <a href="right-sidebar.html">Right</a>
-                                <a href="dual-sidebar.html">Dual</a>
-                                <a href="blank.html">Blank</a>
-                            </li>
-                        </ul>
-                    </div>  
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-document"></i> Pages <span class="badge blue lighten-2">12</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="article.html">Article</a>
-                                <a href="event.html">Event</a>
-                                <a href="project.html">Project</a>
-                                <a href="player.html">Music Player</a>
-                                <a href="todo.html">ToDo</a>
-                                <a href="category.html">Category</a>
-                                <a href="product.html">Product</a>
-                                <a href="checkout.html">Checkout</a>
-                                <a href="search.html">Search</a>
-                                <a href="faq.html">Faq</a>
-                                <a href="coming-soon.html">Coming Soon</a>
-                                <a href="404.html">404</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-apps"></i> App <span class="badge blue lighten-2">11</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="calendar.html">Calendar</a>
-                                <a href="profile.html">Profile</a>
-                                <a href="chat.html">Chat</a>
-                                <a href="login.html">Login</a>
-                                <a href="signup.html">Sign Up</a>
-                                <a href="lockscreen.html">Lockscreen</a>
-                                <a href="forgot.html">Password</a>
-                                <a href="notification.html">Notification</a>
-                                <a href="chart.html">Chart</a>
-                                <a href="timeline.html">Timeline</a>
-                                <a href="activity.html">Activity</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-list"></i> Blog <span class="badge blue lighten-2">2</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="blog.html">Classic</a>
-                                <a href="blog-card.html">Card</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-image"></i> Gallery <span class="badge blue lighten-2">3</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="gallery-filter.html">Filter</a>
-                                <a href="gallery-masonry.html">Masonry</a>
-                                <a href="gallery-card.html">Card</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <i class="ion-android-camera"></i> Portfolio <span class="badge blue lighten-2">3</span>
-                    </div>
-                    <div class="collapsible-body">
-                        <ul class="collapsible">
-                            <li>
-                                <a href="portfolio-filter.html">Filter</a>
-                                <a href="portfolio-masonry.html">Masonry</a>
-                                <a href="portfolio-card.html">Card</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="shop.html" class="no-child"><i class="ion-android-playstore"></i> Shop</a></li>
-                <li><a href="video.html" class="no-child"><i class="ion-ios-videocam"></i> Video</a></li>
-                <li><a href="news.html" class="no-child"><i class="ion-social-rss"></i> News</a></li>
-                <li><a href="contact.html" class="no-child"><i class="ion-android-map"></i> Contact</a></li>
+
+                <li><a href="#" class="no-child"><i class="ion-android-sync"></i> Sync</a></li>
+                <li><a href="#" class="no-child"><i class="ion-android-exit"></i> Logout</a></li>
             </ul>
             <!-- End of Sidebars -->
 
@@ -184,24 +75,31 @@
 
 
                 <!-- Main Content -->
-                <div class="animated fadeinup" ng-controller="homeCtrl">
-                    <div class="h-banner animated fadeindown">
-                        <div class="parallax bg-3">
+                <div class="animated fadeinup" >
+                    <div class=" animated fadeindown " >
+                        <div class="input-field meh">
+                            <i class="ion-search prefix"></i> 
+                            <input class="validate" id="mobile" type="text" name="search"> 
+                            <label for="mobile" class="">Search</label>
+                        </div>
+                        <div class="">   
+
                             <div class="floating-button animated bouncein delay-3">
+
                                 <span class="btn-floating resize btn-large waves-effect waves-light accent-color btn z-depth-1  modal-trigger" href="#modal1">
                                     <i class="ion-plus"></i>
                                 </span>
                             </div>
-                            <div class="banner-title">Jane Lee</div>
+                            
 
                         </div>
                     </div>
 
                     <div class="p-t-20">
                         <ul class="tabs">
-                            <li class="tab"><a class="active" href="#test1">Upcoming</a></li>
-                            <li class="tab"><a href="#test2">In the Lot</a></li>
-                            <li class="tab"><a href="#test3">Monthly</a></li>
+                            <li class="tab"><a class="active ftest1" href="#test1">Upcoming</a></li>
+                            <li class="tab"><a class="ftest2" href="#test2">In the Lot</a></li>
+                            <li class="tab"><a class="ftest3" href="#test3">Monthly</a></li>
 
                         </ul>
                     </div>
@@ -210,9 +108,9 @@
                         <div class="container activity p-l-r-20">
                             <div class="row m-l-0">
                                 <div class="col">
-                                    <div ng-if="booking.bstatus == 1 && booking.btype != 3" class="contact" ng-repeat="booking in bookings">
+                                    <div data-vehicle-number="{{booking.rnum}}" data-booking-id="{{booking.id}}" ng-if="booking.bstatus == 1 && booking.btype != 3" class="contact" ng-repeat="booking in bookings">
                                         <span class="date">{{ booking.stime}}</span>
-                                        <div class="dot z-depth-1">
+                                        <div class="dot z-depth-1 {{ (booking.ptype == 2 && booking.pstatus == 1) ? 'prepaid' : 'postpaid'}}">
                                         </div>
                                         <p>
                                             #{{ booking.id}} - {{booking.rnum}}
@@ -233,17 +131,16 @@
                             <div class="row m-l-0">
                                 <div class="col">
 
-                                    <div ng-if="booking.bstatus == 2 && booking.btype != 3" class="contact" ng-repeat="booking in bookings">
+                                    <div data-vehicle-number="{{booking.rnum}}" data-booking-id="{{booking.id}}" ng-if="booking.bstatus == 2 && booking.btype != 3" class="contact" ng-repeat="booking in bookings">
                                         <span class="date">{{ booking.stime}}</span>
-                                        <div class="dot z-depth-1">
+                                        <div class="dot z-depth-1 {{ (booking.ptype == 2 && booking.pstatus == 1) ? 'prepaid' : 'postpaid'}}">
                                         </div>
-                                        <p>
+                                        <p class="{{ booking.via == 1 ? 'vred' : '' }}">
                                             #{{ booking.id}} - {{booking.rnum}}
                                         </p>
                                         <span>{{booking.mname}}</span>
                                         <div class="friends">
                                             <i class="ion-log-out circle"></i> 
-                                            <i class="ion-card circle"></i>
                                         </div>
                                     </div>
 
@@ -258,7 +155,7 @@
                             <div class="row m-l-0">
                                 <div class="col">
 
-                                    <div ng-if="booking.btype == 3" class="contact" ng-repeat="booking in bookings">
+                                    <div data-vehicle-number="{{booking.rnum}}" data-booking-id="{{booking.id}}" ng-if="booking.btype == 3" class="contact" ng-repeat="booking in bookings">
                                         <span class="date">{{ booking.stime}}</span>
                                         <div class="dot z-depth-1">
                                         </div>
@@ -267,8 +164,8 @@
                                         </p>
                                         <span>{{booking.mname}}</span>
                                         <div class="friends">
-                                            <i ng-click="minout(booking.id,1)" class="ion-log-in circle" ng-if="booking.checkin_time < booking.checkout_time"></i> 
-                                            <i ng-click="minout(booking.id,2)" class="ion-log-out circle" ng-if="booking.checkin_time > booking.checkout_time"></i>
+                                            <i ng-click="minout(booking.id, 1)" class="ion-log-in circle" ng-if="booking.checkin_time < booking.checkout_time"></i> 
+                                            <i ng-click="minout(booking.id, 2)" class="ion-log-out circle" ng-if="booking.checkin_time > booking.checkout_time"></i>
                                         </div>
                                     </div>
 
@@ -300,7 +197,7 @@
         <div id="modal1" class="modal">
             <div class="modal-content">
                 <h4>Add New Booking</h4>
-                <form>
+                <form id="addBooking">
                     <div class="input-field">
                         <i class="ion-iphone prefix"></i> 
                         <input class="validate" id="mobile" type="text" name="mobile"> 
@@ -309,19 +206,24 @@
 
                     <div class="input-field">
                         <i class="ion-model-s prefix"></i> 
-                        <input class="validate" id="rnum" type="text" name="rnum"> 
+                        <input class="validate" id="rnum" type="text" name="vechicle_no"> 
                         <label for="rnum">Registration Number</label>
                     </div>
 
                     <div style="margin-bottom:20px;">
-                        <input name="atype" type="radio" id="twow" />
+                        <input name="term" type="radio" id="twow" checked value="3" />
                         <label for="twow">Two Wheeler</label>
 
-                        <input name="atype" type="radio" id="fwow" />
+                        <input name="term" type="radio" id="fwow" value="4" />
                         <label for="fwow">Four Wheeler</label>
+
+                        <input type="hidden" name="userId" value="{{ user.ID}}" />
+                        <input type="hidden" name="via" value="1" />
+                        <input type="hidden" name="pid" value="{{ user.parkingLot}}" />
+
                     </div>
                 </form>
-                <button class="waves-effect waves-light btn-large accent-color width-100 m-b-20 animated bouncein delay-4" id="addBooking">Add Booking</button>
+                <button class="waves-effect waves-light btn-large accent-color width-100 m-b-20 animated bouncein delay-4" id="addBooking" ng-click="addBooking()">Add Booking</button>
             </div>
             <div class="modal-footer">
                 <button class="modal-action modal-close waves-effect waves-green btn-flat pull-left">Cancel</button>
@@ -342,6 +244,7 @@
 
         <script src="js/angular/angular.min.js"></script>
         <script src="js/angular-sanitize.js"></script>
+        <script src="js/pace.min.js"></script>
         <script src="js/app.js"></script>
 
     </body>
