--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class=" animated fadeindown " >
                         <div class="input-field meh">
                             <i class="ion-search prefix"></i> 
-                            <input class="validate" id="mobile" type="text" name="search"> 
+                            <input class="validate" id="search" type="text" name="search"> 
                             <label for="mobile" class="">Search</label>
                         </div>
                         <div class="">   
