--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                         <span>{{booking.mname}}</span>
                                         <div class="friends">
                                             <i class="ion-log-out circle" ng-if="booking.via == 1" ng-click="scheckout(booking.id,booking.checkin_time)"></i> 
-                                            <i class="ion-log-out circle" ng-if="booking.via != 1" ng-click="ncheckout(booking.id,checkin_time)"></i> 
+                                            <i class="ion-log-out circle" ng-if="booking.via != 1" ng-click="ncheckout(booking.id)"></i> 
                                         </div>
                                     </div>
 
