--- a/index.html
+++ b/index.html
@@ -255,11 +255,13 @@
                     </div>
 
                     <div style="margin-bottom:20px;">
-                        <input name="term" type="radio" id="twow" checked value="3" />
-                        <label for="twow">Two Wheeler</label>
+                      
 
-                        <input name="term" type="radio" id="fwow" value="4" />
-                        <label for="fwow">Four Wheeler</label>
+                        <input name="term" type="radio" id="fwow" value="4" checked/>
+                        <label for="fwow">Four Wheeler</label> 
+                        
+                        <input name="term" type="radio" id="twow"  value="3" />
+                        <label for="twow">Two Wheeler</label>
 
                         <input type="hidden" name="userId" value="{{ user.ID}}" />
                         <input type="hidden" name="via" value="1" />
