--- a/index.html
+++ b/index.html
@@ -75,9 +75,19 @@
             .ion-search {
                 font-size: 30px !important;
             }
-            
+
             .activity{
                 border-bottom: none;
+            }
+
+
+            .btn-floating.btn-large {
+                width: 50px;
+                height: 50px;
+            }
+
+            .btn-floating.btn-large i {
+                line-height: 50px;
             }
         </style>
 
