--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                         </div>
                                         <p>
                                             {{booking.rnum}}
-                                            <i class="ion-log-out pull-right"  ng-click="checkin(booking.id)"></i>
+                                            <i class="ion-log-in pull-right"  ng-click="checkin(booking.id)"></i>
                                         </p>
                                         <span>#{{booking.id}} {{booking.mname}} </span>
 
