updated font, color as per new theme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" ng-app="occupyparking">
     <head>
-        <title>Occupy Parking - Supervisor App</title>
+        <title>Parkoscope - Supervisor App</title>
         <script src="js/checkLogin.js"></script>
         <meta content="IE=edge" http-equiv="x-ua-compatible">
         <meta content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" name="viewport">
@@ -55,7 +55,7 @@
             i {
                 float: right;
                 font-size: 20px !important;
-                color: #1ac897;
+                color: #2B73AB;
             }
             .contact {
                 position: relative;
@@ -127,7 +127,7 @@
                     <div class="open-left" id="open-left" data-activates="slide-out-left">
                         <i class="ion-android-menu"></i>
                     </div>
-                    <span class="title">Occupy Parking</span>
+                    <span class="title goodtime">Parkoscope</span>
 
                 </div>
 
