--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Occupy Parking - Supervisor App</title>
+        <title>Parkoscope - Supervisor App</title>
         <meta content="IE=edge" http-equiv="x-ua-compatible">
         <meta content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" name="viewport">
         <meta content="yes" name="apple-mobile-web-app-capable">
@@ -31,7 +31,7 @@
                 <div id="toolbar" class="tool-login primary-color animated fadeindown">
                     <div style="text-align:center; padding-top: 30px;">
                    
-                        <h1 style="color:#fff;">Occupy Parking</h1>
+                        <h1 class="goodtime" style="color:#fff;">Parkoscope</h1>
                     </div>
 
                 <!-- Main Content -->
