--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
             .btn-floating.btn-large i {
                 line-height: 50px;
             }
+            #toolbar i {
+            font-size: 24px;
+            line-height: 56px;
+            color: #fff;
+        }
         </style>
 
 
