Vehicle Number validation

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <input class="validate vehicle-no" id="vnum1"   onkeyup="tabToNext(this,2)"  oninput="maxLengthCheckVnum(this,2)" pattern="[a-zA-Z]+" ng-pattern-restrict  type="text" name="vechicle_no"  placeholder="MH"  style="text-transform: uppercase;" > 
                         <input class="validate vehicle-no" id="vnum2"  onkeyup="tabToNext(this,2)"  oninput="maxLengthCheckVnum(this,2)"    type="number" name="vechicle_no"   placeholder="01"  style="text-transform: uppercase;"> 
                         <input class="validate vehicle-no" id="vnum3"  onkeyup="tabToNext(this,2)"  oninput="maxLengthCheckVnum(this,2)"    type="text" name="vechicle_no"  placeholder="AA"  style="text-transform: uppercase;"> 
-                        <input class="validate vehicle-no" id="vnum4"  onkeyup="tabToNext(this,4)"  oninput="maxLengthCheckVnum(this,4)"    type="number" name="vechicle_no"  placeholder="1234"  style="text-transform: uppercase;"> 
+                        <input class="validate vehicle-no vehicle-no-last-box " id="vnum4"  onkeyup="tabToNext(this,4)"  oninput="maxLengthCheckVnum(this,4)"    type="number" name="vechicle_no"  placeholder="1234"  style="text-transform: uppercase;"> 
 
                     </div>
 
